# Astream-update

./: Dockerfile  docker-compose.yml  pyproject.toml
astream/api/: routes.py
astream/services/: catalog.py  metadata.py  stream.py
astream/utils/: mapper.py
