[project]
name = "astream"
version = "0.1.0"
description = "Stremio Addon pour Anime-Sama"
authors = [
    {name = "AStream Team"}
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "lxml>=4.9.0"
]

[tool.poetry]
name = "astream"
version = "0.1.0"
description = "Stremio Addon pour Anime-Sama"
authors = ["AStream Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
jinja2 = "^3.1.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
httpx = "^0.24.0"
beautifulsoup4 = "^4.12.0"
python-dotenv = "^1.0.0"
lxml = "^4.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
