[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astream"
version = "0.1.0"
description = "Stremio Addon pour Anime-Sama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "lxml>=4.9.0",
    "curl-cffi>=0.5.10",
    "loguru>=0.7.0",
    "unidecode>=1.3.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["astream*"]
